# streamrr

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE.md  NOTICE.hbs  NOTICE.md  README.md  about.toml  dist-workspace.toml
.github/workflows/: ci.yml
src/: lib.rs  main.rs
src/import/: har.rs  mod.rs
src/record/: mod.rs  rewrite.rs  source.rs
src/record/source/: har.rs  http.rs
src/replay/: mod.rs
src/shared/: bom.rs  byte_range.rs  ctrlc.rs  hexstring.rs  mod.rs  recording.rs  timed.rs  url.rs
tests/: rewrite.rs
tests/fixtures/: elephants_dream_master.m3u8  mux_llhls.m3u8
tests/snapshots/: rewrite__rewrite_elephants_dream.snap  rewrite__rewrite_elephants_dream_master.snap  rewrite__rewrite_mux_llhls.snap
