[package]
name = "streamrr"
version = "0.2.0"
authors = ["Dolby Laboratories, Inc."]
edition = "2024"
description = "Record and replay HLS streams."
license = "BSD-3-Clause-Clear"
repository = "https://github.com/THEOplayer/streamrr"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
m3u8-rs = "6.0.0"
url = "2.5.7"
reqwest = { version = "0.12.23", features = ["rustls-tls", "stream"], default-features = false }
clap = { version = "4.5.48", features = ["derive"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = { version = "1.0.145", features = ["raw_value"] }
tokio = { version = "1.47.1", features = ["rt-multi-thread", "macros", "signal"] }
tokio-util = { version = "0.7.16", features = ["io"] }
futures = "0.3.31"
warp = { version = "0.4.2", features = ["server"] }
chrono = "0.4.42"
anyhow = "1.0.100"
indexmap = { version = "2.11.4", features = ["serde"] }
sha1 = "0.10.6"
thiserror = "2.0.17"
har = "0.8.1"
base64 = "0.22.1"

[dev-dependencies]
insta = "1.43.2"

# Enable 'dist' even though publish = false
[package.metadata.dist]
dist = true

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
