[package]
name = "streamrr"
version = "0.1.0"
authors = ["Dolby Laboratories, Inc."]
edition = "2024"
description = "Record and replay HLS streams."
license = "BSD-3-Clause-Clear"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
m3u8-rs = "6.0.0"
url = "2.5.7"
reqwest = { version = "0.12.23", features = ["rustls-tls", "stream"], default-features = false }
clap = { version = "4.5.48", features = ["derive"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
tokio = { version = "1.47.1", features = ["rt-multi-thread", "macros"] }
tokio-util = { version = "0.7.16", features = ["io"] }
futures = "0.3.31"
warp = { version = "0.4.2", features = ["server"] }
chrono = "0.4.42"
anyhow = "1.0.100"
indexmap = { version = "2.11.4", features = ["serde"] }

[dev-dependencies]
insta = "1.43.2"
